collapse all button fix

--- a/css/main.css
+++ b/css/main.css
@@ -40,5 +40,5 @@
 }
 
 body {
-    background-color: #ECF0F1;
+    background-color: #f1f2f6;
 }
